fixed navbar on mobile

--- a/ecommerce-app/src/App.css
+++ b/ecommerce-app/src/App.css
@@ -73,3 +73,9 @@ body {
 .white-text {
   color: var(--gray-100);
 }
+
+@media (max-width: 1250px) {
+  .container {
+    margin-top: 6.5rem;
+  }
+}
